# witskit

./: .gitignore  IMPLEMENTATION_PHASES_2_3.md  IMPLEMENTATION_PLAN.md  LICENSE  PASON_COMPLIANCE.md  PROJECT_AUDIT_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  STRATEGIC_ROADMAP.md  WITSKIT_2025_REASSESSMENT.md  WITSKIT_FINAL_ASSESSMENT.md  WITSRecords.htm  __init__.py  cli.py  main.py  mkdocs.yml  pason_standards.txt  pyproject.toml  quick_stream_test.py  requirements.txt  sample.wits  sample_comprehensive.wits  sample_comprehensive_v2.wits  simple_port_test.py  test_handshaking.py  test_wits_streaming.py  wits_client_test.py
decoder/: __init__.py  wits_decoder.py
docs/: index.md  installation.md  sql_storage.md
docs/api/: decoder.md  storage.md
docs/guide/: cli-usage.md  getting-started.md  wits-format.md
examples/: sql_demo.py  sql_storage_example.py
models/: __init__.py  symbols.py  unit_converter.py  wits_frame.py
tests/: __init__.py  cli_backup.py  demo_complete.py  example_usage.py  test_decoder.py  test_real_wits.py  test_transport.py  test_unit_converter.py  verify_usage.py
transport/: __init__.py  base.py  file_reader.py  serial_reader.py  tcp_reader.py
witskit/: __init__.py  cli.py
witskit/decoder/: __init__.py  wits_decoder.py
witskit/models/: __init__.py  symbols.py  unit_converter.py  wits_frame.py
witskit/storage/: __init__.py  base.py  schema.py  sql_writer.py
witskit/transport/: __init__.py  base.py  file_reader.py  pason_serial_reader.py  pason_tcp_reader.py  requesting_tcp_reader.py  serial_reader.py  tcp_reader.py
