[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "witskit"
version = "0.1.0"
description = "The most comprehensive Python SDK for processing WITS (Wellsite Information Transfer Standard) data in the oil & gas drilling industry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Mikey Howk", email = "howktechllc@gmail.com"},
]
keywords = ["wits", "drilling", "oil-gas", "logging", "mwd", "lwd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "annotated-types==0.7.0",
    "black>=25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "iniconfig==2.1.0",
    "loguru==0.7.3",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pyserial==3.5",
    "pytest==8.4.0",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "win32-setctime==1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/witskit"
Documentation = "https://github.com/yourusername/witskit#readme"
Repository = "https://github.com/yourusername/witskit"
Issues = "https://github.com/yourusername/witskit/issues"

[project.scripts]
witskit = "witskit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["witskit"]

[tool.hatch.build.targets.sdist]
include = [
    "/witskit",
    "/tests",
    "/README.md",
    "/LICENSE",
]
